# nanoFunctionGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
firmware/: CMakeLists.txt  FreeRTOSConfig.h  main.c  pwm_output.c  pwm_output.h  scpi_interface.c  scpi_interface.h
hardware/lib/445I23D12M00000/: 445I23D12M00000.kicad_sym  445I23D12M00000_CTS.step
hardware/lib/445I23D12M00000/445I23D12M00000_footprint/: 445I23D12M00000_CTS-L.kicad_mod  445I23D12M00000_CTS-M.kicad_mod  445I23D12M00000_CTS.kicad_mod
hardware/lib/B82462G4103M000/: B82462G4103M000.STEP
hardware/lib/DCP020515DU/DCP020515DU/: DCP020515DU.dcm  DCP020515DU.kicad_sym  DCP020515DU.lib  DCP020515DU.mod  DVB0012A.kicad_mod
hardware/lib/DCP020515DU/DCP020515DU/3D/: DCP020515DU.stp
hardware/lib/KMS231GP_LFS/3D/: KMS231GP_LFS.stp
hardware/lib/MBRM120/: MBRM120LT1G.STEP
hardware/lib/MBRM120/MBRM120.pretty/: MBRM120.kicad_mod
hardware/lib/TO-220-3_no_hole/TO-220-3_no_hole.pretty/: TO-220-3_no_hole.kicad_mod
hardware/lib/USB4110-GF-A/USB4110GFA_footprints/: USB4110-GF-A_GCT.kicad_mod  USB4110-GF-A_GCT_no_hole.kicad_mod
hardware/lib/di79l12zab/: di79l12zab.kicad_sym
hardware/nanoFunctionGenerator/: AnalogFrontEnd.kicad_sch  ampl_filter.kicad_sch  fp-info-cache  fp-lib-table  mcu.kicad_sch  nanoFunctionGenerator.kicad_pcb  nanoFunctionGenerator.kicad_prl  nanoFunctionGenerator.kicad_pro  nanoFunctionGenerator.kicad_sch  power.kicad_sch  sym-lib-table
hardware/nanoFunctionGenerator_v2/: AnalogFrontEnd.kicad_sch  ampl_filter.kicad_sch  fp-info-cache  fp-lib-table  mcu.kicad_sch  nanoFunctionGenerator_v2.csv  nanoFunctionGenerator_v2.kicad_pcb  nanoFunctionGenerator_v2.kicad_prl  nanoFunctionGenerator_v2.kicad_pro  nanoFunctionGenerator_v2.kicad_sch  power.kicad_sch  sym-lib-table
scripts/: README.md  requirements.txt  sine_wave_modulation.py
